United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7125722 Crash in PlainSocketImpl.socketBind [macosx]
7125722 : Crash in PlainSocketImpl.socketBind [macosx]

Details
Type:
Bug
Submit Date:
2011-12-29
Status:
Closed
Updated Date:
2012-03-27
Project Name:
JDK
Resolved Date:
2012-03-27
Component:
core-libs
OS:
os_x
Sub-Component:
java.net
CPU:
x86
Priority:
P1
Resolution:
Fixed
Affected Versions:
7u4
Fixed Versions:
7u4

Related Reports
Relates:

Sub Tasks

Description
Starting a special build 7u4 b200 with Tonga, I'm getting a crash on the start somewhere in socketBind (and deeper, in libnet and libjvm).

Crash log attached.

Note that the crash is here even without closed part (for instance when I use binaries created on my machine just from jdk7u-osx sources).

Mac OS X 10.7.2, macmini4,1
To reproduce, you can just start "$this_build/bin/java -cp tonga.jar Tonga"

                                    

Comments
EVALUATION

in the initial fix I tried to re-use the global jfieldid that was initialized elsewhere in the networking
native code. However, this call site was not being initialized in time for the usage in ServerSocket.bind(). So, the bind() was failing unless NetworkInterface was initialized first.
                                     
2012-01-09
EVALUATION

Also reported here:
   http://mail.openjdk.java.net/pipermail/macosx-port-dev/2011-December/001912.html
                                     
2011-12-29



Hardware and Software, Engineered to Work Together