7125722: [macosx] 7u4 b200 crash i.e. in Tonga Reviewed-by: alanb, dcubed